<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>fr.neatmonster</groupId>
    <artifactId>nocheatplus-parent</artifactId>
    <packaging>pom</packaging>
    <version>1.1-SNAPSHOT</version>

    <name>NoCheatPlus Parent</name>
    <description>
        The initial pom design had been taken from mbax (GitHub).

        The naming of the native compatibility modules mostly follows NCPCompat + shortcut of server mod name + earliest
        build/version that the module would run with (though it should be compiled with the latest available build
        rather, latest build also can be used, if it is the first module depicting an API incompatibility transition).

        NCPCompatBukkit provides compatibility for the Bukkit-API only (no native module available), aiming at keeping
        NCP up for a new MC version for if no native module is available . Tendency is to use the latest Bukkit version
        rather, but since it is used for some &quot;unknown mods&quot; as well, it is not compiled with the latest
        Bukkit version always.

    </description>
    <url>https://dev.bukkit.org/projects/nocheatplus</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.build.timestamp.format>yyyy_MM_dd-HH_mm</maven.build.timestamp.format>
        <!-- Static analysis should not fail the build by default -->
        <checkstyle.failOnViolation>false</checkstyle.failOnViolation>
        <pmd.failOnViolation>false</pmd.failOnViolation>
        <spotbugs.failOnError>false</spotbugs.failOnError>
    </properties>

    <!-- Default modules -->
    <modules>
        <module>NCPBuildBase</module>
        <module>NCPCommons</module>
        <module>NCPCore</module>
        <module>NCPCompatBukkit</module>
        <module>NCPCompatProtocolLib</module>
        <module>NCPPlugin</module>
    </modules>

    <repositories>
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>viaversion-repo</id>
            <url>https://repo.viaversion.com</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>md5net</id>
            <url>https://repo.md-5.net/content/repositories/public/</url>
        </repository>
    </repositories>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>5.13.3</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-api</artifactId>
                <version>5.13.2</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <configuration>
                        <!-- Skip module deploy by default -->
                        <skip>true</skip>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.14.0</version>
                    <configuration>
                        <source>17</source>
                        <target>17</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-checkstyle-plugin</artifactId>
                    <version>3.3.0</version>
                    <configuration>
                        <failOnViolation>${checkstyle.failOnViolation}</failOnViolation>
                        <configLocation>google_checks.xml</configLocation>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-pmd-plugin</artifactId>
                    <version>3.21.0</version>
                    <configuration>
                        <failOnViolation>${pmd.failOnViolation}</failOnViolation>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>com.github.spotbugs</groupId>
                    <artifactId>spotbugs-maven-plugin</artifactId>
                    <version>4.9.3.0</version>
                    <configuration>
                        <failOnError>${spotbugs.failOnError}</failOnError>
                    </configuration>
                    <executions>
                        <execution>
                            <goals>
                                <goal>check</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.3</version>
                <configuration>
                    <includeJUnit5Extensions>true</includeJUnit5Extensions>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-pmd-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

</project>
